--- a/pages/types - cópia 4.html
+++ b/pages/types - cópia 4.html
@@ -617,7 +617,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Fire (6/6/0)
+<!--  TODO:    1 ▶ Fire (6/5/1)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Fire.png" alt="Fire"></th>
 
@@ -657,7 +657,7 @@
 
 <!-- Fighter --> <td></td>
 <!-- Aerial --> <td></td>
-<!-- Plant --> <td>-</td>
+<!-- Plant --> <td></td>
 <!-- Beast --> <td style="display: none"></td>
 <!-- Ghost --> <td>+</td>
 
@@ -971,7 +971,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Rock (8/7/1)
+<!--  TODO:    1 ▶ Rock (7/7/0)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Rock.png" alt="Rock"></th>
 
@@ -980,14 +980,14 @@
 <!-- Fire --> <td>+</td>
 <!-- Water --> <td>+d</td>
 <!-- Electric --> <td>+</td>
-<!-- Wind --> <td>+d</td>
+<!-- Wind --> <td>+</td>
 <!-- Sand --> <td>+d</td>
 <!-- Earth --> <td>-d</td>
 <!-- Rock --> <td></td>
 <!-- Snow --> <td>-d</td>
 <!-- Ice --> <td>-d</td>
 <!-- Snow_Ice --> <td class="Snow_Ice"></td>
-<!-- Metal --> <td>-</td>
+<!-- Metal --> <td>-b</td>
 <!-- Magnetic --> <td style="display: none"></td>
 <!-- Sound --> <td>+d</td>
 <!-- Gravity --> <td>-d</td>
@@ -1011,7 +1011,7 @@
 
 <!-- Fighter --> <td>-d</td>
 <!-- Aerial --> <td></td>
-<!-- Plant --> <td>+</td>
+<!-- Plant --> <td></td>
 <!-- Beast --> <td style="display: none"></td>
 <!-- Ghost --> <td>></td>
 
@@ -1028,9 +1028,9 @@
 <!-- Extra_8 --> <td style="display: none" class="Extra_8"></td>
 <!-- Extra_9 --> <td style="display: none" class="Extra_9"></td>
 </tr>
-    
 
-<!--  TODO:    1 ▶ Snow (7/6/1)
+
+<!--  TODO:    1 ▶ Snow (7/6/1) <-
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Snow.png" alt="Snow"></th>
 
@@ -1207,7 +1207,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Metal (8/8/0)
+<!--  TODO:    1 ▶ Metal (7/8/-1) <-
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Metal.png" alt="Metal"></th>
 
@@ -1219,7 +1219,7 @@
 <!-- Wind --> <td>+d</td>
 <!-- Sand --> <td>+d</td>
 <!-- Earth --> <td>-d</td>
-<!-- Rock --> <td>+</td>
+<!-- Rock --> <td>+d</td>
 <!-- Snow --> <td>-d</td>
 <!-- Ice --> <td>-d</td>
 <!-- Snow_Ice --> <td class="Snow_Ice"></td>
@@ -1247,7 +1247,7 @@
 
 <!-- Fighter --> <td>-d</td>
 <!-- Aerial --> <td></td>
-<!-- Plant --> <td>+</td>
+<!-- Plant --> <td></td>
 <!-- Beast --> <td style="display: none"></td>
 <!-- Ghost --> <td></td>
 
@@ -1620,7 +1620,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Aura (3/3/0)
+<!--  TODO:    1 ▶ Aura (2/3/-1) ↑
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Aura.png" alt="Aura"></th>
 
@@ -1652,7 +1652,7 @@
 <!-- Nuclear --> <td style="display: none"></td>
 <!-- Blade --> <td></td>
 <!-- Cut --> <td style="display: none"></td>
-<!-- Shot --> <td>+</td>
+<!-- Shot --> <td></td>
 <!-- Laser --> <td style="display: none"></td>
 <!-- Hi-Tech --> <td></td>
 <!-- Digital --> <td></td>
@@ -2033,7 +2033,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Shot (5/5/0) 
+<!--  TODO:    1 ▶ Shot (5/4/1) 
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Shot.png" alt="Shot"></th>
 
@@ -2057,7 +2057,7 @@
 
 <!-- Light --> <td></td>
 <!-- Dark --> <td></td>
-<!-- Aura --> <td>-</td>
+<!-- Aura --> <td></td>
 <!-- Psychic --> <td>-</td>
 <!-- Magic --> <td></td>
 
@@ -2269,49 +2269,49 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Robot (11/9/2)
+<!--  TODO:    1 ▶ Robot (//)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr class="Robot"><th scope="row"><img class="type_icon" src="../images/game/icons/types/Robot.png" alt="Robot"></th>
 
-<!-- Normal --> <td>+</td>
+<!-- Normal --> <td></td>
 
-<!-- Fire --> <td>-</td>
-<!-- Water --> <td>-</td>
-<!-- Electric --> <td>-d</td>
-<!-- Wind --> <td>+d</td>
-<!-- Sand --> <td>-</td>
-<!-- Earth --> <td>-d</td>
-<!-- Rock --> <td>+</td>
-<!-- Snow --> <td>-</td>
-<!-- Ice --> <td>-</td>
+<!-- Fire --> <td></td>
+<!-- Water --> <td></td>
+<!-- Electric --> <td></td>
+<!-- Wind --> <td></td>
+<!-- Sand --> <td></td>
+<!-- Earth --> <td></td>
+<!-- Rock --> <td></td>
+<!-- Snow --> <td></td>
+<!-- Ice --> <td></td>
 <!-- Snow_Ice --> <td class="Snow_Ice"></td>
 <!-- Metal --> <td></td>
 <!-- Magnetic --> <td style="display: none"></td>
-<!-- Sound --> <td>+d</td>
-<!-- Gravity --> <td>-d</td>
-<!-- Time --> <td>+d</td>
+<!-- Sound --> <td></td>
+<!-- Gravity --> <td></td>
+<!-- Time --> <td></td>
 
 <!-- Light --> <td></td>
 <!-- Dark --> <td></td>
 <!-- Aura --> <td></td>
-<!-- Psychic --> <td>-</td>
+<!-- Psychic --> <td></td>
 <!-- Magic --> <td></td>
 
-<!-- Chemical --> <td>++d</td>
+<!-- Chemical --> <td></td>
 <!-- Nuclear --> <td style="display: none"></td>
-<!-- Blade --> <td>+</td>
+<!-- Blade --> <td></td>
 <!-- Cut --> <td style="display: none"></td>
-<!-- Shot --> <td>+</td>
+<!-- Shot --> <td></td>
 <!-- Laser --> <td style="display: none"></td>
 <!-- Hi-Tech --> <td></td>
 <!-- Digital --> <td></td>
 <!-- Robot --> <td class="Robot"></td>
 
-<!-- Fighter --> <td>+</td>
+<!-- Fighter --> <td></td>
 <!-- Aerial --> <td></td>
-<!-- Plant --> <td>+</td>
+<!-- Plant --> <td></td>
 <!-- Beast --> <td style="display: none"></td>
-<!-- Ghost --> <td>+d!</td>
+<!-- Ghost --> <td></td>
 
 <!-- Dragon --> <td style="display: none"></td>
 <!-- Dinosaur --> <td style="display: none"></td>
@@ -2387,7 +2387,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Aerial (3/4/-1) <-
+<!--  TODO:    1 ▶ Aerial (3/4/-1)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Aerial.png" alt="Aerial"></th>
 
@@ -2446,23 +2446,23 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Plant (6/7/-1)
+<!--  TODO:    1 ▶ Plant (5/5/0)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Plant.png" alt="Plant"></th>
 
 <!-- Normal --> <td></td>
 
-<!-- Fire --> <td>+d</td>
+<!-- Fire --> <td></td>
 <!-- Water --> <td>+</td>
 <!-- Electric --> <td>+</td>
 <!-- Wind --> <td></td>
 <!-- Sand --> <td>+</td>
 <!-- Earth --> <td>-d</td>
-<!-- Rock --> <td>-d</td>
+<!-- Rock --> <td></td>
 <!-- Snow --> <td>-d</td>
 <!-- Ice --> <td>-d</td>
 <!-- Snow_Ice --> <td class="Snow_Ice"></td>
-<!-- Metal --> <td>-d</td>
+<!-- Metal --> <td></td>
 <!-- Magnetic --> <td style="display: none"></td>
 <!-- Sound --> <td></td>
 <!-- Gravity --> <td>+d</td>
