--- a/pages/skills.html
+++ b/pages/skills.html
@@ -116,7 +116,7 @@
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
-                        <img class="piece_icon" src="../images/game/icons/types/Cyber.png" alt=""><span class="piece_text">Cyber</span> 
+                        <img class="piece_icon" src="../images/game/icons/types/Hi-Tech.png" alt=""><span class="piece_text">Hi-Tech</span> 
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
@@ -144,7 +144,7 @@
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
-                        <img class="piece_icon" src="../images/game/icons/types/Machine.png" alt=""><span class="piece_text">Machine</span>
+                        <img class="piece_icon" src="../images/game/icons/types/Robot.png" alt=""><span class="piece_text">Robot</span>
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
@@ -160,7 +160,7 @@
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
-                        <img class="piece_icon" src="../images/game/icons/types/Cyber.png" alt=""><span class="piece_text">Cyber</span> 
+                        <img class="piece_icon" src="../images/game/icons/types/Hi-Tech.png" alt=""><span class="piece_text">Hi-Tech</span> 
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
@@ -188,7 +188,7 @@
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
-                        <img class="piece_icon" src="../images/game/icons/types/Machine.png" alt=""><span class="piece_text">Machine</span>
+                        <img class="piece_icon" src="../images/game/icons/types/Robot.png" alt=""><span class="piece_text">Robot</span>
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
@@ -204,7 +204,7 @@
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
-                        <img class="piece_icon" src="../images/game/icons/types/Cyber.png" alt=""><span class="piece_text">Cyber</span> 
+                        <img class="piece_icon" src="../images/game/icons/types/Hi-Tech.png" alt=""><span class="piece_text">Hi-Tech</span> 
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
@@ -232,7 +232,7 @@
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
-                        <img class="piece_icon" src="../images/game/icons/types/Machine.png" alt=""><span class="piece_text">Machine</span>
+                        <img class="piece_icon" src="../images/game/icons/types/Robot.png" alt=""><span class="piece_text">Robot</span>
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
@@ -252,7 +252,7 @@
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
-                        <img class="piece_icon" src="../images/game/icons/types/Machine.png" alt=""><span class="piece_text">Machine</span>
+                        <img class="piece_icon" src="../images/game/icons/types/Robot.png" alt=""><span class="piece_text">Robot</span>
                     </div>
 
                     <div class="switch button_full pill" onclick="F_skills_types_switchs(this); switch_event(this)"> 
@@ -286,13 +286,13 @@
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Impact.png" alt=" "><span>Impact</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Piercing.png" alt=" "><span>Piercing</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Intelligent.png" alt=" "><span>Intelligent</span></a></li>
-                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Energy.png" alt=" "><span>Energy</span></a></li>
+                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Special.png" alt=" "><span>Special</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Normal.png" alt=" "><span>Normal</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Aerial.png" alt=" "><span>Aerial</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Fighter.png" alt=" "><span>Fighter</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Blade.png" alt=" "><span>Blade</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Shot.png" alt=" "><span>Shot</span></a></li>
-                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Cyber.png" alt=" "><span>Cyber</span></a></li>
+                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Hi-Tech.png" alt=" "><span>Hi-Tech</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Digital.png" alt=" "><span>Digital</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Fire.png" alt=" "><span>Fire</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Water.png" alt=" "><span>Water</span></a></li>
@@ -301,6 +301,7 @@
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Sand.png" alt=" "><span>Sand</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Earth.png" alt=" "><span>Earth</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Rock.png" alt=" "><span>Rock</span></a></li>
+                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Snow.png" alt=" "><span>Snow</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Ice.png" alt=" "><span>Ice</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Metal.png" alt=" "><span>Metal</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Sound.png" alt=" "><span>Sound</span></a></li>
@@ -323,7 +324,7 @@
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Dragon.png" alt=" "><span>Dragon</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Imp@ct.png" alt=" "><span>Imp@ct</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Laser.png" alt=" "><span>Laser</span></a></li>
-                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Machine.png" alt=" "><span>Machine</span></a></li>
+                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Robot.png" alt=" "><span>Robot</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Magnetic.png" alt=" "><span>Magnetic</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Nuclear.png" alt=" "><span>Nuclear</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Plasma.png" alt=" "><span>Plasma</span></a></li>
@@ -751,7 +752,7 @@
 
 <tr>
     <td class='Name'><span>Auto Aim</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cyber.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Hi-Tech.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -788,7 +789,7 @@
 
 <tr>
     <td class='Name'><span>Bio Recharge</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cyber.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Hi-Tech.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -855,7 +856,7 @@
 
 <tr>
     <td class='Name'><span>Blocking Filter</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cyber.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Hi-Tech.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -890,7 +891,7 @@
 
 <tr>
     <td class='Name'><span>Boost Cooler</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Machine.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Robot.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -1102,7 +1103,7 @@
 
 <tr>
     <td class='Name'><span>Deepfake</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Machine.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Robot.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -1465,7 +1466,7 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
 
 <tr>
     <td class='Name'><span>Heat Vision</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Machine.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Robot.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -1578,7 +1579,7 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
 
 <tr>
     <td class='Name'><span>Light Filter</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Machine.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Robot.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -1719,6 +1720,41 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
 </tr>
 
 <tr>
+    <td class='Name'><span>Machine Revolution</span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Robot.png' alt=''></span></td>
+
+    <td class='Damage'><span></span></td>
+    <td class='Effect'>
+        <span class='SPD'><!-- Act first, Act last --></span>
+        <span class='React'></span>
+        <span class='Critical'><!-- ?% critical chance --></span>
+        <span class='State'>+Physical and Digital Counter</span>
+        <span class='Recover'></span>
+        <span class='Drain'></span>
+        <span class='Call'></span>
+        <span class='Union'></span>
+        <span class='Integrate'></span>
+        <span class='Field'></span>
+        <span class='Block'></span>
+        <span class='Special'></span>
+    </td>
+        <!-- Anonymous, Encrypt, Firewall, Low Power Mode, Zip -->
+        <!-- Bug, Lag, Crash, Vulnerable, Hack, Overload, Burn - Confusion, Fascination, Fear, Rage -->
+
+    <td class='Success'><span></span></td>
+    <td class='Cost'><span></span></td>
+    <!-- <span class='cost hp/turn/money'></span><span class='cost mp'></span><span class='cost tp'></span> -->
+    <td class='Target'><span></span></td><!-- User, 1 Ally, All Allies, 1 Enemy, All Enemies -->
+    <td class='plusTP'><span></span></td>
+    <td class='Condition'><span><span class="Equip">Visor equiped</span><span class="OtherCond"></span></span></td>
+    <td class='Available'><span>IRL and Net</span></td><!-- In Real Life, IRL and Net -->
+    <td class='Hit'><span></span></td><!-- Physical, Certain Physical, Digital, Certain Digital -->
+    <td class='Consistency'><span><!-- Solid, Energy, Digital --></span></td>
+    <td class='Description'><span></span></td>
+    <td class='Notes'><span>Smart Counter. Judgment Day</span></td>
+</tr>
+
+<tr>
     <td class='Name'><span>Mainframe</span></td>
     <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Digital.png' alt=''></span></td>
 
@@ -1753,46 +1789,11 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
     <td class='Notes'><span>Mainframe: Computador de grande porte, c/ foco no processamento de um grande volume de informações.</span></td>
 </tr>
 
-<tr>
-    <td class='Name'><span>Machine Revolution</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Machine.png' alt=''></span></td>
-
-    <td class='Damage'><span></span></td>
-    <td class='Effect'>
-        <span class='SPD'><!-- Act first, Act last --></span>
-        <span class='React'></span>
-        <span class='Critical'><!-- ?% critical chance --></span>
-        <span class='State'>+Physical and Digital Counter</span>
-        <span class='Recover'></span>
-        <span class='Drain'></span>
-        <span class='Call'></span>
-        <span class='Union'></span>
-        <span class='Integrate'></span>
-        <span class='Field'></span>
-        <span class='Block'></span>
-        <span class='Special'></span>
-    </td>
-        <!-- Anonymous, Encrypt, Firewall, Low Power Mode, Zip -->
-        <!-- Bug, Lag, Crash, Vulnerable, Hack, Overload, Burn - Confusion, Fascination, Fear, Rage -->
-
-    <td class='Success'><span></span></td>
-    <td class='Cost'><span></span></td>
-    <!-- <span class='cost hp/turn/money'></span><span class='cost mp'></span><span class='cost tp'></span> -->
-    <td class='Target'><span></span></td><!-- User, 1 Ally, All Allies, 1 Enemy, All Enemies -->
-    <td class='plusTP'><span></span></td>
-    <td class='Condition'><span><span class="Equip">Visor equiped</span><span class="OtherCond"></span></span></td>
-    <td class='Available'><span>IRL and Net</span></td><!-- In Real Life, IRL and Net -->
-    <td class='Hit'><span></span></td><!-- Physical, Certain Physical, Digital, Certain Digital -->
-    <td class='Consistency'><span><!-- Solid, Energy, Digital --></span></td>
-    <td class='Description'><span></span></td>
-    <td class='Notes'><span>Smart Counter. Judgment Day</span></td>
-</tr>
-
 <!--N-->
 
 <tr>
     <td class='Name'><span>Nano Repair</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Machine.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Robot.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -1866,7 +1867,7 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
 
 <tr class="skillTest">
     <td class='Name'><span>Psionic Boom</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cyber.png' alt=''><img class='icon_type' src='../images/game/icons/types/Psychic.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Hi-Tech.png' alt=''><img class='icon_type' src='../images/game/icons/types/Psychic.png' alt=''></span></td>
 
     <td class='Damage'><span>-HP</span></td>
     <td class='Effect'>
@@ -1975,7 +1976,7 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
 
 <tr>
     <td class='Name'><span>Repair</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cyber.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Hi-Tech.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -2152,7 +2153,7 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
 
 <tr>
     <td class='Name'><span>Solar Recharge</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Machine.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Robot.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -2187,7 +2188,7 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
 
 <tr>
     <td class='Name'><span>Steel Bond</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Fire.png' alt=''><img class='icon_type' src='../images/game/icons/types/Machine.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Fire.png' alt=''><img class='icon_type' src='../images/game/icons/types/Robot.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -2259,7 +2260,7 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
 
 <tr>
     <td class='Name'><span>Testa Recharge</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Machine.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Robot.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
