--- a/pages/types.html
+++ b/pages/types.html
@@ -1679,7 +1679,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Psychic (5/5/0) <-
+<!--  TODO:    1 ▶ Psychic (5/5/0)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Psychic.png" alt="Psychic"></th>
 
