--- a/pages/index.html
+++ b/pages/index.html
@@ -176,7 +176,7 @@
                         <tr><th scope="row">Languages</th><td>English, Português</td></tr>
                         <tr><th scope="row">Controls</th><td>Mouse, Keyboard, Touchscreen</td></tr>
                         <!--<tr><th scope="row">File size</th><td>280.5 MB</td></tr>-->
-                        <tr><th scope="row">Developer<!--Author--></th><td>George Maxwell</td></tr>
+                        <!--<tr><th scope="row">Developer/Author</th><td>George Maxwell</td></tr>-->
                         <!--<tr><th scope="row">Publisher</th><td>George Maxwell</td></tr>-->
                         <!--<tr><th scope="row">Mature</th><td>12+</td></tr>-->
                     </table>
