--- a/pages/skills.html
+++ b/pages/skills.html
@@ -288,7 +288,7 @@
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Intelligent.png" alt=" "><span>Intelligent</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Special.png" alt=" "><span>Special</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Normal.png" alt=" "><span>Normal</span></a></li>
-                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Aerial.png" alt=" "><span>Aerial</span></a></li>
+                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Flying.png" alt=" "><span>Flying</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Fighter.png" alt=" "><span>Fighter</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Blade.png" alt=" "><span>Blade</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Shot.png" alt=" "><span>Shot</span></a></li>
