--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -1058,7 +1058,9 @@
 
                     <h2 class="hidden">Slider</h2>
 
-                    <p>Obs.: O Slider não funciona direito com imagens cuja altura é maior que a largura.</p>
+                    <p>Obs.: O Slider não fica muito legal dependendo da proporção da tela.</p>
+
+                    <p> Obs.: As imagens (exceto a 1ª) ficam com um espaço pequeno vazio em cima.</p>
 
                     <p>Slider com imagens pequenas:</p>
 
