--- a/pages/index.html
+++ b/pages/index.html
@@ -90,14 +90,16 @@
 
                     </div>
 
-                        <!-- <div class="lb2"></div>
+                        <div class="lb2"></div>
                         
-                        <div id="msg_seeBigImages_9" class="button_hide_container screen_small_portrait container_organize">   
+                        <div id="msg_seeBigImages_10" class="button_hide_container screen_not_small container_organize">   
                             <div class="button_hide"></div> 
-                            <p class="attention">
-                            <img src="../images/icons/rotate_device_to_max_img.svg" alt="" class="rotate_device_to_max_img">
+                            <p class="warning">
+                                Click on the Slider to see its images larger.
+                            <!-- To see the big images, put the cell phone in landscape mode. -->
+                            <!-- <img src="../images/icons/rotate_device_to_max_img.svg" alt="" class="rotate_device_to_max_img"> -->
                             </p>
-                        </div> --><!--To see the big images, put the cell phone in landscape mode.-->
+                        </div>
                         
                 </section>
 
