--- a/pages/index.html
+++ b/pages/index.html
@@ -90,7 +90,7 @@
 
                     </div>
 
-                        <div class="lb2"></div>
+                        <div class="lb2 screen_not_small"></div>
                         
                         <div id="msg_seeBigImages_10" class="button_hide_container screen_not_small container_organize">   
                             <div class="button_hide"></div> 
