--- a/pages/types.html
+++ b/pages/types.html
@@ -75,7 +75,7 @@
 
                 <!-- <div id="msg_workBadMobile_2" class="types_table_msg button_hide_container container_organize">   
                     <div class="button_hide"></div> -->
-                    <p class="types_table_msg fail container_organize">The types table only appears on desktop (using Google Chrome, Edge, or Firefox), it doesn't work correctly on mobile devices.</p>
+                    <!-- <p class="types_table_msg fail container_organize">The types table only appears on desktop (using Google Chrome, Edge, or Firefox), it doesn't work correctly on mobile devices.</p> -->
                 <!-- </div> -->
  
                 <div class="lb2"></div> 
