--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -69,7 +69,7 @@
 
                 <div class="aboutUs_team offset">
 
-                    <img class="center profile_img" src="../images/team/gmes.png" alt="George Maxwell Elpídio de Siqueira photo">
+                    <img class="center profile_img" src="../images/team/gmes.jpg" alt="George Maxwell Elpídio de Siqueira photo">
 
                     <p class="center bold profile_txt" style="text-align: center;">George Maxwell Elpídio de Siqueira</p>
 
