--- a/pages/types.html
+++ b/pages/types.html
@@ -1032,7 +1032,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Sound (6/5/1)
+<!--  TODO:    1 ▶ Sound (6/5/1) <-
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Sound.png" alt="Sound"></th>
 
@@ -1292,7 +1292,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Aura (3/3/0) <-
+<!--  TODO:    1 ▶ Aura (3/3/0)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Aura.png" alt="Aura"></th>
 
@@ -1812,7 +1812,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Flying (4/4/0) <-
+<!--  TODO:    1 ▶ Flying (4/4/0)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Flying.png" alt="Flying"></th>
 
