--- a/pages/index.html
+++ b/pages/index.html
@@ -84,7 +84,7 @@
                                 <img src="../images/game/screenshots/menu.webp" alt=""> 
                                 <img src="../images/game/screenshots/map_tile_white.webp" alt="">
                                 <img src="../images/game/screenshots/battle_net_cyber_girl.webp" alt="">
-                                <img src="../images/game/screenshots/battle_net_menu_cyber_girl.webp" alt="">
+                                <!-- <img src="../images/game/screenshots/battle_net_menu_cyber_girl.webp" alt=""> -->
 
                         </div>  
 
