--- a/pages/skills.html
+++ b/pages/skills.html
@@ -280,7 +280,7 @@
 
                 <div class="FULLHD_STC_conteiner">
                     <ul class="choice dropdown center skills_types_choice" onclick="choice(this)">
-                        <li><span>Choose Skills Type(s)</span></li>
+                        <li><span>Choose Skills Type<!-- (s) --></span></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><span>All Types</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/State.png" alt=" "><span>State</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Impact.png" alt=" "><span>Impact</span></a></li>
@@ -336,7 +336,7 @@
                     <!-- <div class="switch key_text inverted center offset skills_switch_show_only_internet_skills" onclick="switch_1(this); switch_event(this)"> -->
 
                         <div class="piece_key"></div>
-                        <span class="piece_text">Show only skills available on the net</span>
+                        <span class="piece_text">Show only net skills<!--  available on the net --></span>
                     </div>
                 </div>
 
@@ -2447,7 +2447,7 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
 
                 </div> 
 
-                <p class="skills_quantity">Quantity of skills on the table: <span>0</span></p> 
+                <p class="skills_quantity"><!-- Amount of  -->Skills shown on the table now: <span>0</span></p> 
 
                 <!-- <p class="click_on_the_table">*Click on the table to view it in full screen.</p> -->
 
