--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -73,7 +73,7 @@
 
                     <p class="center bold profile_txt" style="text-align: center;">George Maxwell Elpídio de Siqueira</p>
 
-                    <p class="center profile_txt" style="text-align: center;">Co-Founder and CEO, Developer, Web Designer, Game Designer, Graphic Designer, Screenwriter<!-- , Composer, Typographer --></p>
+                    <p class="center profile_txt" style="text-align: center;">Founder and CEO, Developer, Web Designer, Game Designer, Graphic Designer, Screenwriter, Typographer<!-- , Composer --></p>
                         
                 </div>
 
