--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -1025,12 +1025,12 @@
                 <p>Galeria:</p>
 
                 <div class="gallery">
-                    <div class="painel">
+                    <!-- <div class="painel">
                         <button class="btn_back"><img src="../images/icons/arrowRounded_L.png"></button>
-                        <button class="btn_fullScreen"><!-- <img src="../images/icons/click_to_max_img.svg"> --></button>
+                        <button class="btn_fullScreen"> --><!-- <img src="../images/icons/click_to_max_img.svg"> --><!-- </button>
                         <button class="btn_next"><img src="../images/icons/arrowRounded_R.png"></button>
                         <span class="order"><span class="actual">1</span>/<span class="total">?</span></span>
-                    </div>
+                    </div> -->
 
                     <img src="../images/exs/grassland_(1920×1080).png" alt="">
                     <img src="../images/exs/Earth_(1920×1080).jpg" alt="">
