--- a/pages/index.html
+++ b/pages/index.html
@@ -110,7 +110,7 @@
                         <div id="msg_seeBigImages_10" class="button_hide_container screen_not_small container_organize">   
                             <div class="button_hide"></div> 
                             <p class="warning">
-                                Click on the Slider to see it larger
+                                Click In the middle of the gallery to see it larger
                             <!-- To see the big images, put the cell phone in landscape mode. -->
                             <!-- <img src="../images/icons/rotate_device_to_max_img.svg" alt="" class="rotate_device_to_max_img"> -->
                             </p>
