--- a/pages/index.html
+++ b/pages/index.html
@@ -80,9 +80,9 @@
 
                         <div class="gallery border_radius_big">
                             <div class="painel">
-                                <button class="btn_back"><img src="../hi-techCore/images/icons/arrowRounded_L.png"></button>
+                                <button class="btn_back"><img src="../hi-techCore/images/icons/arrowRounded_L.png" alt="Back"></button>
                                 <button class="btn_fullScreen"></button>
-                                <button class="btn_next"><img src="../hi-techCore/images/icons/arrowRounded_R.png"></button>
+                                <button class="btn_next"><img src="../hi-techCore/images/icons/arrowRounded_R.png" alt="Next"></button>
                                 <span class="order"><span class="actual">1</span>/<span class="total">?</span></span>
                             </div>
     
@@ -110,7 +110,7 @@
                         <div id="msg_seeBigImages_10" class="button_hide_container screen_not_small container_organize">   
                             <div class="button_hide"></div> 
                             <p class="warning">
-                                Click In the middle of the gallery to see it larger
+                                Click In the middle of the image to see it larger
                             <!-- To see the big images, put the cell phone in landscape mode. -->
                             <!-- <img src="../images/icons/rotate_device_to_max_img.svg" alt="" class="rotate_device_to_max_img"> -->
                             </p>
