--- a/pages/types.html
+++ b/pages/types.html
@@ -325,7 +325,7 @@
 
 <!--  TODO:    1 ▶ Intelligent
 ◈──────────────────────────────────────────────────────◈ -->
-<tr style="display: none"><th scope="row"><img class="type_icon" src="../images/game/icons/types/Intelligent.png" alt="Intelligent"></th>
+<tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Intelligent.png" alt="Intelligent"></th>
 
 <!-- Normal --> <td>+</td>
 
@@ -375,9 +375,9 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Special
+<!--  TODO:    1 ▶ Blast
 ◈──────────────────────────────────────────────────────◈ -->
-<tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Special.png" alt="Special"></th>
+<tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Blast.png" alt="Blast"></th>
 
 <!-- Normal --> <td></td>
 
@@ -512,7 +512,7 @@
 <!--  TODO:    1 ▶ Type (win/lose/total)
 ◈──────────────────────────────────────────────────────◈ -->
                     
-<!--  TODO:    1 ▶ Normal (3/4/-1)
+<!--  TODO:    1 ▶ Normal (3/5/-2)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Normal.png" alt="Normal"></th>
 
@@ -545,7 +545,7 @@
 <!-- Robot --> <td class="Robot"></td>
 
 <!-- Fighter --> <td>+d</td>
-<!-- Flying --> <td>?-</td>
+<!-- Flying --> <td>-d</td>
 <!-- Plant --> <td></td>
 <!-- Ghost --> <td>+d</td>
 
@@ -1032,7 +1032,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Sound (6/5/1) <-
+<!--  TODO:    1 ▶ Sound (6/5/1)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Sound.png" alt="Sound"></th>
 
@@ -1084,7 +1084,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Gravity (4/4/0)
+<!--  TODO:    1 ▶ Gravity (4/4/0) <-
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Gravity.png" alt="Gravity"></th>
 
@@ -1240,7 +1240,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Dark (4/3/1)
+<!--  TODO:    1 ▶ Dark (4/3/1) <-
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Dark.png" alt="Dark"></th>
 
@@ -1448,7 +1448,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Chemical (5/6/-1)
+<!--  TODO:    1 ▶ Chemical (5/6/-1) <-
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Chemical.png" alt="Chemical"></th>
 
@@ -1812,11 +1812,11 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Flying (4/4/0)
+<!--  TODO:    1 ▶ Flying (5/4/1)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Flying.png" alt="Flying"></th>
 
-<!-- Normal --> <td>?+</td>
+<!-- Normal --> <td>+</td>
 
 <!-- Fire --> <td></td>
 <!-- Water --> <td></td>
